<resources>
    <string name="app_name">Medkit</string>
    <string name="bottom_bar_medicines">Medicine</string>
    <string name="bottom_bar_intakes">Intake</string>
    <string name="bottom_bar_settings">Settings</string>
    <string name="preference_basic_settings">Basic settings</string>
    <string name="preference_app_view">App view</string>
    <string name="preference_kits_group">Medication groups</string>
    <string name="preference_start_page">Start page</string>
    <string name="preference_sorting_type">Medication sorting</string>
    <string name="preference_confirm_exit">Confirm exit from app</string>
    <string name="preference_use_vibration_scan">Use a vibration response when scanning medication codes</string>
    <string name="preference_download_images">Download medication images</string>
    <string name="preference_check_expiration_date">Check the expiration date of medications</string>
    <string name="preference_use_alarm_clock">Use alarm clock instead of notifications</string>
    <string name="preference_auto_intake_change_on_time_change">Reschedule intakes on time change (time zone)</string>
    <string name="preference_system">System</string>
    <string name="preference_permissions">Permissions</string>
    <string name="preference_language">App language</string>
    <string name="preference_app_theme">App theme</string>
    <string name="preference_dynamic_color">Dynamic color</string>
    <string name="preference_import_export">Import/Export</string>
    <string name="preference_fixing_notifications">Problems with notifications?</string>
    <string name="preference_system_app_autolaunch">App system autolaunch</string>
    <string name="preference_clear_app_cache">Clear app cache</string>
    <string name="preference_auto_sync_summary_enabled">Enabled when opening application</string>
    <string name="preference_auto_sync_summary_disabled">Disabled when opening application</string>
    <string name="page_medications">Medications</string>
    <string name="page_intake_list">Intake (list)</string>
    <string name="page_intake_current">Intake (current)</string>
    <string name="page_intake_past">Intake (past)</string>
    <string name="page_intake_settings">Settings</string>
    <string name="sorting_a_z">Alphabetically (A to z)</string>
    <string name="sorting_z_a">Alphabetically (z to A)</string>
    <string name="sorting_from_oldest">Expiration date (from oldest)</string>
    <string name="sorting_from_newest">Expiration date (from newest)</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_dark_amoled">Dark AMOLED</string>
    <string name="channel_name">Sound notifications</string>
    <string name="channel_exp_desc">Expiration date</string>
    <string name="channel_intakes_desc">Medication intake</string>
    <string name="channel_pre_desc">Upcoming intake</string>
    <string name="text_action_intake_all_accept">Intake all</string>
    <string name="text_action_intake_all_decline">Clear all</string>
    <string name="text_attention">Attention!</string>
    <string name="text_do_intake">Intake</string>
    <string name="text_do_intake_all">Intake all</string>
    <string name="text_expire_soon">The expiration date of %1$s is near</string>
    <string name="text_intake_amount">Intake amount</string>
    <string name="text_intake_amount_not_enough">It\'s time to take %1$s, but there\'s not enough!</string>
    <string name="text_intake_prealarm_text">Medication: %1$s\nIntake amount: %2$s %3$s\nTime: %4$s</string>
    <string name="text_intake_prealarm_title">Upcoming intake</string>
    <string name="text_intake_sure_to_intake_all">Are you sure that you are taking all medications at the moment?</string>
    <string name="text_intake_time">Medication: %1$s\nIntake amount: %2$s %3$s\nLeftover medication: %4$s %3$s</string>
    <string name="text_medicine_amount_not_enough">Not enough left</string>
    <string name="placeholder_dose">0,5 mg + 84 mcg</string>
    <string name="placeholder_time">Time #%1$d</string>
    <string name="text_exp_date">Exp. date</string>
    <string name="text_package_opened_date">Package opened</string>
    <string name="text_indications_for_use">Usage indications</string>
    <string name="text_medicine_comment">Comment</string>
    <string name="text_medicine_composition">Composition</string>
    <string name="text_medicine_description">Description</string>
    <string name="text_medicine_display_name">Display name</string>
    <string name="text_medicine_dose">Dose</string>
    <string name="text_medicine_form">Release form</string>
    <string name="text_medicine_group">Group</string>
    <string name="text_medicine_product_name">Product name</string>
    <string name="text_medicine_recommendations">Usage recommendations</string>
    <string name="text_medicine_status_checked">Scanned, verified</string>
    <string name="text_medicine_status_scanned">Scanned, unverified</string>
    <string name="text_medicine_status_self_added">Added manually</string>
    <string name="text_medicine_storage_conditions">Storage conditions</string>
    <string name="type_tablets">TABLETS</string>
    <string name="type_capsules">CAPSULES</string>
    <string name="type_pills">PILLS</string>
    <string name="type_dragee">DRAGEE</string>
    <string name="type_granules">GRANULES</string>
    <string name="type_powder">POWDER</string>
    <string name="type_sachet">SACHET</string>
    <string name="type_solution">SOLUTION</string>
    <string name="type_tincture">TINCTURE</string>
    <string name="type_decoction">DECOCTION</string>
    <string name="type_extract">EXTRACT</string>
    <string name="type_mixture">MIXTURE</string>
    <string name="type_syrup">SYRUP</string>
    <string name="type_emulsion">EMULSION</string>
    <string name="type_suspension">SUSPENSION</string>
    <string name="type_mix">MIX</string>
    <string name="type_ointment">OINTMENT</string>
    <string name="type_gel">GEL</string>
    <string name="type_paste">PASTE</string>
    <string name="type_suppository">SUPPOSITORY</string>
    <string name="type_aerosol">AEROSOL</string>
    <string name="type_spray">SPRAY</string>
    <string name="type_drops">DROPS</string>
    <string name="type_patch">PATCH</string>
    <string name="type_bandage">BANDAGE</string>
    <string name="type_napkins">NAPKINS</string>
    <string name="dose_ed">ED</string>
    <string name="dose_pcs">pcs</string>
    <string name="dose_sach">sach</string>
    <string name="dose_g">g</string>
    <string name="dose_mg">mg</string>
    <string name="dose_l">l</string>
    <string name="dose_ml">ml</string>
    <string name="dose_ratio" translatable="false">%</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_list">List</string>
    <string name="tab_current">Current</string>
    <string name="tab_past">Past</string>
    <string name="intake_text_amount">Quantity</string>
    <string name="intake_text_by_schedule">Scheduled</string>
    <string name="intake_text_date">Date</string>
    <string name="intake_text_extra">Extra</string>
    <string name="intake_text_food">Food &amp; Med</string>
    <string name="intake_text_food_after">After meal</string>
    <string name="intake_text_food_before">Before meal</string>
    <string name="intake_text_food_during">During meal</string>
    <string name="intake_text_in_fact">Actual</string>
    <string name="intake_text_in_stock">In stock</string>
    <string name="intake_text_in_stock_params">In stock: %1$s %2$s</string>
    <string name="intake_text_interval">Interval</string>
    <string name="intake_text_not_taken">Not taken</string>
    <string name="intake_text_period">Period</string>
    <string name="intake_text_quantity" translatable="false">%1$s: %2$s %3$s</string>
    <string name="intake_text_schema_type">Schema type</string>
    <string name="intake_text_taken">Taken</string>
    <string name="intake_text_time">Time</string>
    <string name="intake_text_start">Start</string>
    <string name="intake_text_finish">Finish</string>
    <string name="intake_extra_cancellable">Notification timeout</string>
    <string name="intake_extra_fullscreen">Fullscreen notification</string>
    <string name="intake_extra_no_sound">Silent</string>
    <string name="intake_extra_prealarm">Upcoming notification</string>
    <string name="intake_extra_desc_cancellable">Notification will be canceled automatically after 10 minutes</string>
    <string name="intake_extra_desc_fullscreen">An intent to launch instead of posting the notification to the status bar on locked screen</string>
    <string name="intake_extra_desc_no_sound">Silences notification, regardless of the sounds or vibrations</string>
    <string name="intake_extra_desc_prealarm">A reminder will be sent 30 minutes before the regular schedule</string>
    <string name="intake_interval_daily">daily</string>
    <string name="intake_interval_weekly">weekly</string>
    <string name="intake_interval_other">custom</string>
    <string name="intake_schema_type_indefinitely">Indefinitely</string>
    <string name="intake_schema_type_day_picker">Day picker</string>
    <string name="intake_schema_type_personal">Personal</string>
    <string name="intake_period_pick">by date</string>
    <string name="intake_period_other">by number of days</string>
    <string name="intake_period_indef">indefinite</string>
    <string name="manual_add">Would you like to add the medication manually?</string>
    <string name="text_choose_from_gallery">Choose from gallery</string>
    <string name="text_clear_app_cache_description">This action will delete the application cache, as well as no longer used medication photos</string>
    <string name="text_code_not_found">Code not found!</string>
    <string name="text_confirm_deletion_int">Are you sure you want to delete this intake?</string>
    <string name="text_confirm_deletion_med">Are you sure you want to delete this medication?</string>
    <string name="text_confirm_schedule_to_taken">Do you confirm that you have already taken "%1$s" on %2$s at %3$s?</string>
    <string name="text_connection_error">Connection error!</string>
    <string name="text_data_in_cloud">Data detected in the cloud</string>
    <string name="text_data_in_cloud_desc">There is data detected in the cloud. What would you like to do?</string>
    <string name="text_download_from_cloud">Download from cloud</string>
    <string name="text_duplicate">This medication has been already added!</string>
    <string name="text_error_not_medicine">This label code is not from a medication!</string>
    <string name="text_exit_app">Are you sure you want to exit the app?</string>
    <string name="text_exit_cloud">Exit from cloud</string>
    <string name="text_exit_cloud_desc">Do you confirm that you would like to exit the cloud account?</string>
    <string name="text_export_database">Export data</string>
    <string name="text_export_images">Export images</string>
    <string name="text_fill_field">Fill in this field!</string>
    <string name="text_fix_notifications">The application will restart and all overdue notifications will appear in the status bar. Do not use this function if everything works correctly!</string>
    <string name="text_images">Images</string>
    <string name="text_import_data_description">When importing, the selected data will be overwritten</string>
    <string name="text_import_database">Import data</string>
    <string name="text_import_images">Import images</string>
    <string name="text_kit_list_is_empty">There are no groups found. You can add groups in the application settings.</string>
    <string name="text_kit_title">Group title</string>
    <string name="text_daily_at">Daily at 12:00</string>
    <string name="text_off">Disabled</string>
    <string name="text_on">Enabled</string>
</resources>