<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="app_view"
        app:title="@string/preference_app_view">

        <ListPreference
            app:allowDividerBelow="true"
            app:defaultValue="Home"
            app:entries="@array/fragment_pages_name"
            app:entryValues="@array/fragment_pages"
            app:icon="@drawable/vector_home"
            app:key="default_start_fragment"
            app:persistent="true"
            app:title="@string/preference_start_page"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:allowDividerAbove="true"
            app:defaultValue="new-old"
            app:entries="@array/sorting_types_name"
            app:entryValues="@array/sorting_types"
            app:icon="@drawable/vector_sort"
            app:key="sorting_order"
            app:persistent="true"
            app:title="@string/preference_sorting_type"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:enabled="true"
            app:icon="@drawable/vector_medicine"
            app:key="download_images"
            app:persistent="true"
            app:singleLineTitle="false"
            app:summaryOff="@string/text_off"
            app:summaryOn="@string/text_on"
            app:title="@string/preference_download_images" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:enabled="true"
            app:icon="@drawable/vector_calendar"
            app:key="light_period_picker"
            app:persistent="true"
            app:singleLineTitle="false"
            app:summaryOff="@string/text_off"
            app:summaryOn="@string/text_on"
            app:title="@string/preference_easy_period_picker" />

        <SwitchPreferenceCompat
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="true"
            app:enabled="true"
            app:icon="@drawable/vector_time"
            app:key="check_exp_date"
            app:persistent="true"
            app:singleLineTitle="false"
            app:summaryOff="@string/text_off"
            app:summaryOn="@string/text_daily_at"
            app:title="@string/preference_check_expiration_date" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="app_system"
        app:title="@string/preference_system">

        <ListPreference
            app:allowDividerAbove="true"
            app:defaultValue="null"
            app:entries="@array/languages_name"
            app:entryValues="@array/languages"
            app:icon="@drawable/vector_language"
            app:key="language"
            app:persistent="true"
            app:title="@string/preference_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="System"
            app:entries="@array/app_themes_name"
            app:entryValues="@array/app_themes"
            app:icon="@drawable/vector_moon"
            app:key="app_theme"
            app:persistent="true"
            app:title="@string/preference_app_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>