<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/text_sort_type"
        android:textAlignment="center" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_inverse_title"
            style="@style/ButtonSortingType"
            android:text="@string/sorting_a_z" />

        <Button
            android:id="@+id/button_reverse_title"
            style="@style/ButtonSortingType"
            android:text="@string/sorting_z_a" />

        <Button
            android:id="@+id/button_inverse_date"
            style="@style/ButtonSortingType"
            android:text="@string/sorting_from_oldest" />

        <Button
            android:id="@+id/button_reverse_date"
            style="@style/ButtonSortingType"
            android:text="@string/sorting_from_newest" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</FrameLayout>

